# indicator-kdeconnect

./: .buildconfig  .gitignore  .travis.yml  AUTHORS  CHANGES.md  CMakeLists.txt  CONTRIBUTORS  INSTALL  README.md  TODO  meson.build  meson_options.txt  meson_post_install.py
cmake/: FindPythonModule.cmake  cmake_uninstall.cmake.in
data/: CMakeLists.txt  com.bajoja.indicator-kdeconnect.appdata.xml  meson.build
data/configs/: com.bajoja.indicator-kdeconnect.appdata.xml  com.indicator-kdeconnect.appdata.xml  com.indicator-kdeconnect.gschema.xml  indicator-kdeconnect.gschema.xml  meson.build
data/desktop/: indicator-kdeconnect-settings.desktop  indicator-kdeconnect-settings.desktop.in  indicator-kdeconnect.desktop.in  meson.build  settings-ind-kdec.desktop  settings-indicator-kdeconnect.desktop.in
data/extensions/: kdeconnect-send-caja.py  kdeconnect-send-caja_dbus.py  kdeconnect-send-caja_old.py  kdeconnect-send-nautilus.py  kdeconnect-send-nautilus_dbus.py  kdeconnect-send-nemo.py  kdeconnect-send-nemo_dbus.py  kdeconnect-send-thunar.desktop  kdeconnect.contract  tags.7d3O0N  teste.txt
data/icons/: meson.build
data/images/: meson.build
data/settings/: com.bajoja.indicator-kdeconnect.appdata.xml  com.bajoja.indicator-kdeconnect.gschema.xml
debian/: changelog  control  copyright  libindicator-kdeconnect.symbols  rules
po/: LINGUAS  Makevars  POTFILES.in  be.po  ca.po  cs.po  de.po  el.po  es.po  fa.po  fr.po  he.po  hr.po  hu.po  id.po  indicator-kdeconnect.pot  it.po  lt.po  nb_NO.po  nl.po  nl_BE.po  pl.po  pt_BR.po  pt_PT.po  ru_RU.po  sl.po  sr.po  zh_Hans.po  zh_Hant.po
rpm/: _aggregate  _service  _servicedata  indicator-kdeconnect.changes  indicator-kdeconnect.spec
scripts/: README.md
scripts/kdeconnect-send/: kdeconnect-send
scripts/wayland/: README.md  i_k_w.sh  indicator-kdeconnect-wayland.sh
src/: Constants.vala.cmake  Device.vala  DeviceIndicator.vala  FirstTimeWizard.vala  KDEConnectManager.vala  RemoteKeyboardWindow.vala  Sms.py  Sms.vala  main.vala  meson.build  module.in
src/ToRemove/: Device.vala  StartupManager.vala  main.vala
src/ToRemove/settings/: Settings.vala
src/ToRemove/utils/: Dialogs.vala  Pair.vala
src/common/: config-constants.vala.in  config-header.vala.in  deviceManager.vala  devicemanager.vala  dialogs.vala  iBatteryPlugin.vala  iDaemonPlugin.vala  iDevicePlugin.vala  iFindMyPhonePlugin.vala  iPingPlugin.vala  iRemoteKeyboard.vala  iSettings.vala  iSftpPlugin.vala  iSharePlugin.vala  iSignals.vala  iTelephonyPlugin.vala  ibatteryplugin.vala  idaemonplugin.vala  idbusmanager.vala  ideviceplugin.vala  ifindmyphoneplugin.vala  indicator-kdeconnect.gschema.xml  ipingplugin.vala  isftpplugin.vala  meson.build  sendVia.vala  settings.vala  utils.vala
src/contractor/: Contractor.vala  KDEConnectSend.vala
src/extensions/: kdeconnect.contract  meson.build
src/extensions/caja/: kdeconnect-send-caja.py
src/extensions/filemanager-c/: meson.build
src/extensions/filemanager-c/nautilus/: meson.build  mesonl.build  sendvia-kdeconnect-module.c  sendvia-kdeconnect.h
src/extensions/filemanager-c/nautilus/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
src/extensions/filemanager-c/nautilus/builddir/meson-logs/: install-log.txt  meson-log.txt
src/extensions/filemanager-python/: meson.build
src/extensions/filemanager-python/caja/: kdeconnect-send.py
src/extensions/filemanager-python/nautilus/: kdeconnect-send.py
src/extensions/filemanager-python/nemo/: kdeconnect-send.py
src/extensions/generic/: meson.build  sendvia-kdeconnect.contract  sendvia-kdeconnect.desktop
src/extensions/sms/: meson.build  sms.py
src/indicator/: device.vala  devicemanager.vala  firstTimeWizard.vala  idevicemanager.vala  ikdeconnectmanager.vala  kdeconnectManager.vala  kdeconnectmanager.vala  main.vala  meson.build  startupManager.vala  utils.vala
src/kdeconnectsend/: KDEConnectSend.vala
src/sendvia/: main.vala  meson.build
src/settings/: InOut.vala  Settings.vala  main.vala  meson.build
src/sms/: Sms.py  Sms.vala
src/utils/: Dialogs.vala  InOut.vala  Pair.vala
