# Executable type

module_exec_name = 'settings-indicator-kdeconnect'

module_deps = [
  modules_deps,
  indicator_kdeconnect_dep
]

module_source = ['main.vala']

module_exec = executable(module_exec_name, 
                         sources: module_source,
                         dependencies : module_deps,
                         install: true)
